# useCaffe

./: CMakeLists.txt  README.md  classifier.cpp  classifier.h  main.cpp
mobilenet/: imagenet_mean.binaryproto
myModel/: MiniNet_Test.protxt  MiniNet_iter_20000.caffemodel  train_data_means.binaryproto
myModel/caffe_test/: MiniNet.prototxt  MiniNet_bak.prototxt  Solver.prototxt  Solver_bak.prototxt  create_lmdb.sh  getTrainTxtFiles.py  reducce_means.sh  testNet.sh  test_data_means.binaryproto  test_label.txt  trainNet.sh  train_label.txt
